--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -28,7 +28,7 @@
             <div class="card-body">
                 <h2 class="card-title">{{ post.title }}</h2>
                 <p class="card-text">{{ post.content|slice(0,150) }}...</p>
-                <a href="#" class="btn btn-primary">Lire la suite</a>
+                <a href="{{ path('post.index', {'slug':post.slug}) }}" class="btn btn-primary">Lire la suite</a>
             </div>
             <div class="card-footer text-muted">
                 Créé par <span class="post-author">{{ post.author }}</span> le {{ post.createdAt|date('d/m/Y') }}
