--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -27,6 +27,7 @@
             <img class="card-img-top" src="{{ post.image }}" alt="{{ post.title }}">
             <div class="card-body">
                 <h2 class="card-title">{{ post.title }}</h2>
+                <span class="badge badge-secondary">{{ post.category.name }}</span>
                 <p class="card-text">{{ post.content|slice(0,150) }}...</p>
                 <a href="{{ path('post.index', {'slug':post.slug}) }}" class="btn btn-primary">Lire la suite</a>
             </div>
