--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -53,6 +53,19 @@
                 <!-- Blog Entries Column -->
                 <div class="col-md-8">
 
+                    {% if app.session.flashbag.peek('success')|length > 0 %}
+                        <ul class="mt-3">
+                            {% for message in app.flashes('success') %}
+                                <li class="alert alert-success alert-dismissible">
+                                    {{ message }}
+                                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                        <span aria-hidden="true">×</span>
+                                    </button>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                    {% endif %}
+
                     <h1 class="my-4">{% block main_page_title %}{% endblock %}</h1>
 
                     {% block body %}{% endblock %}
@@ -136,16 +149,21 @@
 
         {% block javascripts %}
 
-            <!-- Bootstrap core JavaScript -->
-            <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-                    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+            <!-- jQuery -->
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"
+                    integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg=="
                     crossorigin="anonymous"></script>
+
+            <!-- Bootstrap core JavaScript -->
             <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
                     integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
                     crossorigin="anonymous"></script>
             <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js"
                     integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s"
                     crossorigin="anonymous"></script>
+
+            <!-- Script personnel global -->
+            <script src="{{ asset('js/app.js') }}"></script>
 
         {% endblock %}
     </body>
