--- a/templates/post/_comment.html.twig
+++ b/templates/post/_comment.html.twig
@@ -1,6 +1,6 @@
-<div class="media mb-4">
+<li class="media mb-4">
     <div class="media-body">
-        <h5 class="mt-0">Posté par {{ comment.user }} le {{ comment.createdAt|date('d/m/Y') }} à {{ comment.createdAt|date('H:i', 'Europe/Paris') }}</h5>
+        <h5 class="mt-0">Posté par {{ comment.user.firstname }} {{ comment.user.lastname }} le {{ comment.createdAt|date('d/m/Y') }} à {{ comment.createdAt|date('H:i', 'Europe/Paris') }}</h5>
         {{ comment.content }}
     </div>
-</div>
+</li>
