--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -24,31 +24,32 @@
     <h4>Commentaires</h4>
 
     <!-- Formulaire d'ajout de commentaire -->
-    <div class="card my-4">
-        <h5 class="card-header">Laissez un commentaire:</h5>
-        <div class="card-body">
-            {{ form_start(form, {'attr':{'id':'comment-form'}}) }}
-            {{ form_widget(form) }}
-            <input type="submit" value="Envoyer mon commentaire">
-            {{ form_end(form) }}
+
+    {% if is_granted('ROLE_USER') %}
+        <div class="card my-4">
+            <h5 class="card-header">Laissez un commentaire:</h5>
+            <div class="card-body">
+                {{ form_start(form, {'attr':{'id':'comment-form'}}) }}
+                {{ form_widget(form) }}
+                <input type="submit" value="Envoyer mon commentaire">
+                {{ form_end(form) }}
+            </div>
         </div>
-    </div>
+    {% else %}
+        <p><a href="{{ path('security.login') }}">Connectez-vous</a> pour ajouter un commentaire.</p>
+    {% endif %}
 
     <!-- List of comments -->
-    {% if post.comments|length == 0 %}
-        <p>Soyez le premier à commenter cet article !</p>
-    {% else %}
-        <ul class="comments-list">
+    <ul class="comments-list">
+        {% if post.comments|length == 0 %}
+            <li>Soyez le premier à commenter cet article !</li>
+        {% else %}
             {% for comment in post.comments %}
-                <li class="media mb-4">
-                    <div class="media-body">
-                        <h5 class="mt-0">Posté par {{ comment.user }} le {{ comment.createdAt|date('d/m/Y') }} à {{ comment.createdAt|date('H:i', 'Europe/Paris') }}</h5>
-                        {{ comment.content }}
-                    </div>
-                </li>
+                {% include 'post/_comment.html.twig' %}
             {% endfor %}
-        </ul>
-    {%  endif %}
+        {% endif %}
+    </ul>
+
 
 {% endblock %}
 
