--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -4,6 +4,15 @@
 
 {% block body %}
 
-DASHBOARD ADMIN
+    <ul class="nav nav-tabs" id="dashboard-tabs" role="tablist">
+        <li class="nav-item" role="presentation">
+            <a class="nav-link active" id="posts-tab" data-toggle="tab" href="#posts" role="tab" aria-controls="posts" aria-selected="true">Articles</a>
+        </li>
+    </ul>
+    <div class="tab-content" id="dashboard-tab-content">
+        <div class="tab-pane fade show active" id="posts" role="tabpanel" aria-labelledby="posts-tab">
+            {% include 'admin/parts/_posts.html.twig' %}
+        </div>
+    </div>
 
 {% endblock %}
