--- a/templates/post/index.html.twig
+++ b/templates/post/index.html.twig
@@ -13,7 +13,7 @@
     <span class="badge badge-secondary">{{ post.category.name }}</span>
 
     <!-- Author and date -->
-    <p class="lead">Créé par {{ post.author }} le {{ post.createdAt|date('d/m/Y') }}</p>
+    <p class="lead">Créé par {{ post.user.fullname }} le {{ post.createdAt|date('d/m/Y') }}</p>
 
     <!-- Preview Image -->
     <img class="img-fluid rounded" src="{{ post.image }}" alt="">
