--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -24,7 +24,7 @@
 
     {% for post in posts %}
         <div class="card mb-4">
-            <img class="card-img-top" src="{{ post.image }}" alt="{{ post.title }}">
+            <img class="card-img-top" src="{{ asset(post_image_dir ~ '/' ~ post.image) }}" alt="{{ post.title }}">
             <div class="card-body">
                 <h2 class="card-title">{{ post.title }}</h2>
                 <span class="badge badge-secondary">{{ post.category.name }}</span>
