--- a/templates/admin/post/edit.html.twig
+++ b/templates/admin/post/edit.html.twig
@@ -1,8 +1,8 @@
 {% extends 'admin/base.admin.html.twig' %}
 
-{% block title %}{{ parent() }} - Rédiger un article{% endblock %}
+{% block title %}{{ parent() }} - Edition un article{% endblock %}
 
-{% block main_page_title %}Rédiger un article{% endblock %}
+{% block main_page_title %}Editer un article{% endblock %}
 
 {% block body %}
 
